--- a/fcitx.config
+++ b/fcitx.config
@@ -1,6 +1,4 @@
 [程序]
-#如果您的FCITX工作很正常，没有必要修改下面这个设置
-静态模式=0
 显示字体(中)=*
 显示字体(英)=Courier New
 显示字体大小=12
@@ -23,43 +21,44 @@ Enter键行为=2
 输入条使用3D界面=0
 主窗口隐藏模式=1
 显示虚拟键盘=0
-输入条居中=1
+输入条居中=0
 首次显示输入条=1
-#输入条固定宽度(仅适用于码表输入法)，0表示不固定宽度
+# 输入条固定宽度(仅适用于码表输入法)，0表示不固定宽度
 输入条固定宽度=0
 输入条偏移量X=0
 输入条偏移量Y=12
 序号后加点=1
 显示打字速度=1
 显示版本=1
-光标色=255 255 255 255
-主窗口背景色=46 46 46 46
-主窗口线条色=46 46 46 46
-主窗口输入法名称色=255 255 255 255 255 255 255 255 255  
+光标色=255 255 255
+主窗口背景色=46 46 46
+主窗口线条色=46 46 46
+主窗口输入法名称色=255 255 255 255 255 255 255 255 255 
 输入窗背景色=46 46 46
 输入窗提示色=255 255 255
 输入窗用户输入色=255 255 255
-输入窗序号色=255 255 255 
-输入窗第一个候选字色=255 255 255 
-#该颜色值只用于拼音中的用户自造词
+输入窗序号色=255 255 255
+输入窗第一个候选字色=255 255 255
+# 该颜色值只用于拼音中的用户自造词
 输入窗用户词组色=255 255 255
 输入窗提示编码色=255 255 255
-#五笔、拼音的单字/系统词组均使用该颜色
-输入窗其它文本色=255 255 255 255
-输入窗线条色=46 46 46 46
-输入窗箭头色=255 255 255  
+# 五笔、拼音的单字/系统词组均使用该颜色
+输入窗其它文本色=255 255 255
+输入窗线条色=46 46 46
+输入窗箭头色=255 255 255
 虚拟键盘窗背景色=220 220 220
 虚拟键盘窗字母色=80 0 0
 虚拟键盘窗符号色=0 0 0
 
-#除了“中英文快速切换键”外，其它的热键均可设置为两个，中间用空格分隔
+# 除了“中英文快速切换键”外，其它的热键均可设置为两个，中间用空格分隔
 [热键]
 打开/关闭输入法=CTRL_SPACE
-#中英文快速切换键 可以设置为L_CTRL R_CTRL L_SHIFT R_SHIFT L_SUPER R_SUPER
+# 中英文快速切换键 可以设置为L_CTRL R_CTRL L_SHIFT R_SHIFT L_SUPER R_SUPER
 中英文快速切换键=L_CTRL
 双击中英文切换=0
 击键时间间隔=250
 光标跟随=CTRL_K
+隐藏主窗口=CTRL_ALT_H
 GBK支持=CTRL_M
 GBK繁体切换键=CTRL_ALT_F
 联想=CTRL_L
@@ -73,13 +72,14 @@ GBK繁体切换键=CTRL_ALT_F
 [输入法]
 使用拼音=1
 拼音名称=智能拼音
-使用双拼=1
+使用双拼=0
 双拼名称=智能双拼
 默认双拼方案=自然码
-使用区位=1
+使用区位=0
 区位名称=区位
-使用码表=1
+使用码表=0
 提示词库中的词组=1
+其他输入法=
 
 [拼音]
 使用全拼=0
@@ -88,9 +88,9 @@ GBK繁体切换键=CTRL_ALT_F
 增加拼音常用字=CTRL_8
 删除拼音常用字=CTRL_7
 删除拼音用户词组=CTRL_DELETE
-#拼音以词定字键，等号后面紧接键，不要有空格
+# 拼音以词定字键，等号后面紧接键，不要有空格
 拼音以词定字键=[]
-#重码调整方式说明：0-->不调整  1-->快速调整  2-->按频率调整
+# 重码调整方式说明：0-->不调整  1-->快速调整  2-->按频率调整
 拼音单字重码调整方式=2
 拼音词组重码调整方式=1
 拼音常用词重码调整方式=0
@@ -105,3 +105,4 @@ GBK繁体切换键=CTRL_ALT_F
 模糊l和n=0
 模糊s和sh=0
 模糊z和zh=0
+
