update mpd conf

--- a/archlinux/mpd.conf
+++ b/archlinux/mpd.conf
@@ -162,12 +162,12 @@ port				"6600"
 #
 # An example of an ALSA output:
 #
-audio_output {
-	type			"alsa"
-	name			"My ALSA Device"
-	device			"hw:0,0"	# optional
-	format			"44100:16:2"	# optional
-}
+#audio_output {
+#	type			"alsa"
+#	name			"My ALSA Device"
+#	device			"hw:0,0"	# optional
+#	format			"44100:16:2"	# optional
+#}
 #
 # An example of an OSS output:
 #
@@ -180,24 +180,32 @@ audio_output {
 #
 # An example of a shout output (for streaming to Icecast):
 #
-#audio_output {
-#	type			"shout"
+audio_output {
+	type			"shout"
 #	encoding		"ogg"			# optional
-#	name			"My Shout Stream"
-#	host			"localhost"
-#	port			"8000"
-#	mount			"/mpd.ogg"
-#	password		"hackme"
+	name			"listen world! "
+	host			"localhost"
+	port			"8000"
+	mount			"/mpd.ogg"
+	password		"xiangyixiang"
 #	quality			"5.0"
-#	bitrate			"128"
-#	format			"44100:16:1"
-#	protocol		"icecast2"		# optional
-#	user			"source"		# optional
-#	description		"My Stream Description"	# optional
+	bitrate			"128"
+	format			"44100:16:1"
+	protocol		"icecast2"		# optional
+	user			"source"		# optional
+	description		"My Music "	# optional
 #	genre			"jazz"			# optional
+	public			"yes"			# optional
 #	public			"no"			# optional
 #	timeout			"2"			# optional
-#}
+}
+# Need this so that mpd still works if icecast is not running
+audio_output {
+   type "alsa"
+   name "fake out"
+   driver "null"
+ }
+
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
